--- a/web_app/index.html
+++ b/web_app/index.html
@@ -48,24 +48,44 @@
             <p>Выберите набор вопросов для начала тестирования</p>
         </header>
 
+        <h2 style="text-align: center; margin-top: 40px;">Веб-технологии</h2>
         <div class="menu-grid">
-            <a href="test.html?start=0&end=30" class="menu-card">
+            <a href="test.html?subject=web&start=0&end=30" class="menu-card">
                 <h3>Вопросы 1-30</h3>
             </a>
-            <a href="test.html?start=30&end=60" class="menu-card">
+            <a href="test.html?subject=web&start=30&end=60" class="menu-card">
                 <h3>Вопросы 31-60</h3>
             </a>
-            <a href="test.html?start=60&end=90" class="menu-card">
+            <a href="test.html?subject=web&start=60&end=90" class="menu-card">
                 <h3>Вопросы 61-90</h3>
             </a>
-            <a href="test.html?start=90&end=120" class="menu-card">
+            <a href="test.html?subject=web&start=90&end=120" class="menu-card">
                 <h3>Вопросы 91-120</h3>
             </a>
-            <a href="test.html?start=120&end=136" class="menu-card">
+            <a href="test.html?subject=web&start=120&end=136" class="menu-card">
                 <h3>Вопросы 121-136</h3>
             </a>
-            <a href="test.html?mode=all" class="menu-card all-questions">
+            <a href="test.html?subject=web&mode=all" class="menu-card all-questions">
                 <h3>Все вопросы (1-136)</h3>
+            </a>
+        </div>
+
+        <h2 style="text-align: center; margin-top: 40px;">Архитектура Компьютера</h2>
+        <div class="menu-grid">
+            <a href="test.html?subject=arch&start=0&end=30" class="menu-card">
+                <h3>Вопросы 1-30</h3>
+            </a>
+            <a href="test.html?subject=arch&start=30&end=60" class="menu-card">
+                <h3>Вопросы 31-60</h3>
+            </a>
+            <a href="test.html?subject=arch&start=60&end=90" class="menu-card">
+                <h3>Вопросы 61-90</h3>
+            </a>
+            <a href="test.html?subject=arch&start=90&end=120" class="menu-card">
+                <h3>Вопросы 91-120</h3>
+            </a>
+            <a href="test.html?subject=arch&mode=all" class="menu-card all-questions">
+                <h3>Все вопросы (1-120)</h3>
             </a>
         </div>
     </div>
