--- a/web_app/test.html
+++ b/web_app/test.html
@@ -36,6 +36,7 @@
     </div>
 
     <script src="questions.js"></script>
+    <script src="questions_arch.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
