--- a/web_app/index.html
+++ b/web_app/index.html
@@ -62,11 +62,17 @@
             <a href="test.html?subject=web&start=90&end=120" class="menu-card">
                 <h3>Вопросы 91-120</h3>
             </a>
-            <a href="test.html?subject=web&start=120&end=136" class="menu-card">
-                <h3>Вопросы 121-136</h3>
+            <a href="test.html?subject=web&start=120&end=150" class="menu-card">
+                <h3>Вопросы 121-150</h3>
+            </a>
+            <a href="test.html?subject=web&start=150&end=162" class="menu-card">
+                <h3>Вопросы 151-162</h3>
             </a>
             <a href="test.html?subject=web&mode=all" class="menu-card all-questions">
-                <h3>Все вопросы (1-136)</h3>
+                <h3>Все вопросы (1-162)</h3>
+            </a>
+            <a href="answers.html?subject=web" class="menu-card" style="border-left-color: #4caf50; grid-column: 1 / -1;">
+                <h3>Правильные ответы</h3>
             </a>
         </div>
 
@@ -86,6 +92,9 @@
             </a>
             <a href="test.html?subject=arch&mode=all" class="menu-card all-questions">
                 <h3>Все вопросы (1-120)</h3>
+            </a>
+            <a href="answers.html?subject=arch" class="menu-card" style="border-left-color: #4caf50; grid-column: 1 / -1;">
+                <h3>Правильные ответы</h3>
             </a>
         </div>
     </div>
