--- a/web_app/test.html
+++ b/web_app/test.html
@@ -32,8 +32,12 @@
         <div id="result-summary" class="hidden">
             <h2>Результаты</h2>
             <p id="score-display"></p>
+            <div style="margin-top: 20px; text-align: center;">
+                <a id="view-answers-link" href="#" class="primary-btn" style="background-color: #4caf50; text-decoration: none; display: inline-block;">Посмотреть все правильные ответы</a>
+            </div>
         </div>
     </div>
+
 
     <script src="questions.js"></script>
     <script src="questions_arch.js"></script>
